Portfolio translation work in progress.

--- a/indexEN.html
+++ b/indexEN.html
@@ -35,7 +35,7 @@
             </ul>
         </div>
         <div class="nav-right">
-            <a href="portfolio.html" class="switch-button">PORTFOLIO</a>
+            <a href="portfolioEN.html" class="switch-button">PORTFOLIO</a>
             <a href="#contact-section" class="contact-button">
                 <p>CONTACT</p>
             </a>
