--- a/portfolioEN.html
+++ b/portfolioEN.html
@@ -11,27 +11,27 @@
 <header>
     <nav class="nav-bar">
         <div class="nav-left">
-            <a href="indexNL.html">
-                <img src="assets/images/netherlands-flag.png" alt="UK-flag">
+            <a href="portfolioNL.html">
+                <img src="assets/images/netherlands-flag.png" alt="NL-flag">
             </a>
             <a href="#top-of-page">Lorenzo Latinne</a><br>
         </div>
         <div class="nav-middle">
             <ul>
                 <li>
-                    <a href="portfolio.html#top-of-page">INTRO</a>
+                    <a href="portfolioEN.html#top-of-page">INTRO</a>
                 </li>
                 <li>
-                    <a href="portfolio.html#log-book">LOG BOOK</a>
+                    <a href="portfolioEN.html#log-book">LOG BOOK</a>
                 </li>
                 <li>
-                    <a href="portfolio.html#growth">GROWTH</a>
+                    <a href="portfolioEN.html#growth">GROWTH</a>
                 </li>
                 <li>
-                    <a href="portfolio.html#projects">PROJECTS</a>
+                    <a href="portfolioEN.html#projects">PROJECTS</a>
                 </li>
                 <li>
-                    <a href="portfolio.html#reflection">REFLECTION</a>
+                    <a href="portfolioEN.html#reflection">REFLECTION</a>
                 </li>
             </ul>
         </div>
@@ -51,19 +51,13 @@
                 Welcome to My Portfolio!
             </p>
             <p>
-            Hi, I’m Lorenzo Latinne, an aspiring software and web developer with a passion for learning and creating.
-            I’m currently pursuing an Associate Degree in Programming and honing my skills in C#, JavaScript, HTML, and
-            CSS. This portfolio serves as both a final project and a showcase of my growth.
+                Hi, I’m Lorenzo Latinne, an aspiring software and web developer with a passion for learning and creating. I’m currently pursuing an Associate Degree in Programming and honing my skills in C#, JavaScript, HTML, and CSS. This portfolio serves as both a final project and a showcase of my growth.
             </p>
             <p>
-                Here, you’ll find highlights of my work, including projects like a Mastermind game built in C# and this
-                portfolio itself. Each project reflects my enthusiasm for blending logic and creativity—a hallmark of
-                programming that I find deeply rewarding.
+                Here, you’ll find highlights of my work, including projects like a Mastermind game built in C# and this portfolio itself. Each project reflects my enthusiasm for blending logic and creativity—a hallmark of programming that I find deeply rewarding.
             </p>
             <p>
-                Before diving into IT, I gained valuable experience as a Manager’s Assistant, where I sharpened my
-                organizational and communication skills. Outside of coding, I enjoy spending time with my wife and friends,
-                playing guitar, and exploring the balance of discipline and creativity through music.
+                Before diving into IT, I gained valuable experience as a Manager’s Assistant, where I sharpened my organizational and communication skills. Outside of coding, I enjoy spending time with my wife and friends, playing guitar, and exploring the balance of discipline and creativity through music.
             </p>
             <p>
                 Thanks for visiting—I’m excited to share my journey and future projects with you!
@@ -211,7 +205,6 @@
                 <td><span class="pe-test">PE10 C# project sprint 3</span><br>
                     Questions portfolio<br>
                     Info sessions Thalento
-                    Christmas holidays
                 </td>
                 <td class="deadline-task">
                     PE11 (web project)
@@ -222,7 +215,8 @@
             </tr>
             <tr>
                 <td>Week 14</td>
-                <td>Finishing portfolio
+                <td>
+                    Finishing portfolio
                 </td>
                 <td class="deadline-task">
                     PE12 (portfolio)
