Portfolio translation finished.

--- a/portfolioNL.html
+++ b/portfolioNL.html
@@ -698,16 +698,16 @@
                 </div>
                 <div class="project-description">
                     <p>
-                        <span class="bold">Taakomschrijving:</span> The task involved developing a Mastermind game using C# and XAML. The game generates a random 4-color code, and the player has to guess the correct code within 10 attempts. I had to build the app's logic, interface, and ensure the code follows specific technical and functional requirements.
+                        <span class="bold">Taakomschrijving:</span> De taak bestond uit het ontwikkelen van een Mastermind-spel met behulp van C# en XAML. Het spel genereert een willekeurige 4-kleurige code en de speler moet de juiste code raden binnen 10 pogingen. Ik moest de logica van de app bouwen, de interface ontwikkelen en ervoor zorgen dat de code voldoet aan specifieke technische en functionele vereisten.
                     </p>
                     <p>
-                        <span class="bold">Persoonlijke uitdagingen:</span> The challenge was working with C# to handle the game logic, generating random codes, and validating user input. Additionally, creating an intuitive UI using XAML required careful planning of layout and design elements.
+                        <span class="bold">Persoonlijke uitdagingen:</span> De uitdaging was het werken met C# om de spel logica te verwerken, willekeurige codes te genereren en de invoer van de gebruiker te valideren. Daarnaast vereiste het maken van een intuïtieve gebruikersinterface met XAML zorgvuldige planning van de lay-out en ontwerp elementen.
                     </p>
                     <p>
-                        <span class="bold">Wat ik heb geleerd:</span> I learned how to implement game logic, handle user input, and design a functional UI. This project enhanced my skills in C# and XAML, along with working with random number generation and event handling in a gaming context.
+                        <span class="bold">Wat ik heb geleerd:</span> Ik leerde hoe ik de spel logica kon implementeren, gebruikersinvoer kon verwerken en een functionele gebruikersinterface kon ontwerpen. Dit project heeft mijn vaardigheden in C# en XAML verbeterd, evenals het werken met willekeurige getallengeneratie en het afhandelen van evenementen in een gamecontext.
                     </p>
                     <p class="link-to-project">
-                        <a href="https://github.com/PXL-WPL1-2425/c-project-mastermind-3-LorenzoLatinnePXL" target="_blank">Link to the GitHub repo</a>
+                        <a href="https://github.com/PXL-WPL1-2425/c-project-mastermind-3-LorenzoLatinnePXL" target="_blank">Link naar de GitHub repo</a>
                     </p>
                 </div>
             </div>
@@ -719,16 +719,16 @@
             <div class="project-content">
                 <div class="project-description">
                     <p>
-                        <span class="bold">Task description:</span> The task is to create a CV website in two stages: a desktop version and a responsive version. It includes personal details, skills, education, and work experience. The website must be responsive, adapting to different screen sizes using CSS and media queries, without external CSS libraries.
+                        <span class="bold">Taakomschrijving:</span> De taak is om een CV-website te maken in twee fasen: een desktopversie en een responsieve versie. Het bevat persoonlijke gegevens, vaardigheden, opleiding en werkervaring. De website moet responsief zijn en zich aanpassen aan verschillende schermformaten met behulp van CSS en mediaqueries, zonder externe CSS-bibliotheken.
                     </p>
                     <p>
-                        <span class="bold">Personal challenges:</span> A key challenge was determining the personal branding and layout of the website. Ensuring the design reflected a professional image while also making it responsive across devices added complexity, alongside sticking to guidelines like avoiding external libraries.
+                        <span class="bold">Persoonlijke uitdagingen:</span> Een belangrijke uitdaging was het bepalen van de persoonlijke branding en de lay-out van de website. Het waarborgen dat het ontwerp een professionele uitstraling had, terwijl het ook responsief was op verschillende apparaten, voegde complexiteit toe, naast het naleven van richtlijnen zoals het vermijden van externe bibliotheken.
                     </p>
                     <p>
-                        <span class="bold">What I learned:</span> I learned how to design a simple yet responsive website, focusing on clean CSS and media queries, while ensuring the layout reflects a personal brand and is effective on all devices.
+                        <span class="bold">Wat ik heb geleerd:</span> Ik leerde hoe ik een eenvoudige, maar responsieve website kon ontwerpen, met de nadruk op schone CSS en media queries, terwijl ik ervoor zorgde dat de lay-out een persoonlijke merk weerspiegelt en effectief is op alle apparaten.
                     </p>
                     <p class="link-to-project">
-                        <a href="https://github.com/LorenzoLatinnePXL/CV-LorenzoLatinne-1PROA" target="_blank">Link to the GitHub repo</a>
+                        <a href="https://github.com/LorenzoLatinnePXL/CV-LorenzoLatinne-1PROA" target="_blank">Link naar de GitHub repo</a>
                     </p>
                 </div>
                 <div class="project-image">
@@ -741,36 +741,36 @@
         <h3>Reflection</h3>
         <div class="aim-reflection-project">
             <p class="emphasize1 bold center">
-                AIM-reflection on Web Project: CV.
+                AIM-reflectie over Web Project: CV.
             </p>
             <p>
-                Throughout my Web Project: CV, I’ve developed a lot of core qualities like perseverance, adaptability, and a strong willingness to learn. I faced challenges, especially around sticking to a design and adapting the website to be mobile-responsive, but I pushed through and learned a great deal in the process. One of the biggest lessons I took away is the importance of planning ahead rather than diving straight into things. Early on, I didn’t fully follow the project’s requirements, which led to me overcomplicating the design at times. However, I was able to adjust and refocus, and in the end, I’m proud of the website I created.
+                Gedurende mijn Web Project: CV, heb ik veel kernkwaliteiten ontwikkeld zoals doorzettingsvermogen, aanpassingsvermogen en een sterke bereidheid om te leren. Ik stuitte op uitdagingen, vooral met het vasthouden aan een ontwerp en het aanpassen van de website om mobiel responsief te zijn, maar ik heb doorgezet en veel geleerd in het proces. Een van de grootste lessen die ik heb geleerd, is het belang van vooruit plannen in plaats van er zomaar in te duiken. In het begin volgde ik de vereisten van het project niet volledig, wat ertoe leidde dat ik het ontwerp soms overcompliceerde. Toch was ik in staat om me aan te passen en opnieuw te focussen, en uiteindelijk ben ik trots op de website die ik heb gemaakt.
             </p>
             <p>
-                Working solo on this project gave me complete creative freedom, which I appreciated, but it also meant I didn’t get external feedback, something I may consider in the future. While I initially struggled with the limitations of using only HTML and CSS, I ultimately learned that I could do a lot more with these tools than I thought. The process made me more confident in building static webpages, and I know I could create something similar much faster now.
+                Individueel werken aan dit project gaf me volledige creatieve vrijheid, wat ik waardeerde, maar het betekende ook dat ik geen externe feedback kreeg, iets wat ik in de toekomst misschien zal overwegen. Terwijl ik aanvankelijk worstelde met de beperkingen van alleen HTML en CSS, leerde ik uiteindelijk dat ik veel meer kon doen met deze tools dan ik dacht. Het proces maakte me zelfverzekerder in het bouwen van statische webpagina's, en ik weet dat ik nu iets soortgelijks veel sneller zou kunnen maken.
             </p>
             <p>
-                Looking back, I see that I could’ve saved time by making decisions about fonts, colors, and images earlier on, instead of focusing so much on the layout first. This would’ve helped me streamline the design process. I also learned how essential it is to have a responsive design, so I focused on using media queries and flexbox containers to ensure the website was user-friendly on mobile devices. I even removed background images that weren’t fitting well on smaller screens, which was a good move for improving the experience across different devices.
+                Achteraf gezien zie ik dat ik tijd had kunnen besparen door eerder beslissingen te nemen over lettertypes, kleuren en afbeeldingen, in plaats van me eerst zo veel op de lay-out te concentreren. Dit zou me geholpen hebben om het ontwerpproces te stroomlijnen. Ik leerde ook hoe essentieel het is om een responsief ontwerp te hebben, dus ik heb me gericht op het gebruik van media queries en flexbox-containers om ervoor te zorgen dat de website gebruiksvriendelijk was op mobiele apparaten. Ik heb zelfs achtergrondafbeeldingen verwijderd die niet goed pasten op kleinere schermen, wat een goede zet was om de ervaring op verschillende apparaten te verbeteren.
             </p>
             <p>
-                Overall, I’m happy with my progress, and I feel much more confident in my ability to build websites. This project has taught me the value of balancing creativity with practical requirements, as well as the importance of planning ahead to save time and avoid unnecessary setbacks. Going forward, I plan to use these insights in my future projects, knowing that a well-thought-out design can make a big difference.
+                Al met al ben ik tevreden met mijn voortgang en voel ik me veel zekerder in mijn vermogen om websites te bouwen. Dit project heeft me de waarde geleerd van het balanceren van creativiteit met praktische vereisten, evenals het belang van vooruit plannen om tijd te besparen en onnodige tegenslagen te vermijden. Vooruitkijkend ben ik van plan deze inzichten toe te passen in mijn toekomstige projecten, wetende dat een goed doordacht ontwerp een groot verschil kan maken.
             </p>
         </div>
         <div class="aim-reflection-pop">
             <p class="emphasize1 bold center">
-                POP planning and organisation
+                POP planning en organisatie
             </p>
             <p class="emphasize4 bold">
-                What did you learn during this POP session?
+                Wat heb je geleerd tijdens deze POP-sessie?
             </p>
             <p>
-                During this POP session, I gained a deeper understanding of the importance of structured planning to effectively balance learning, work, and personal responsibilities. The detailed schedule highlighted the significance of focused study periods, such as working on "C# Essentials" and "Data Essentials," alongside time allocated for rest and everyday activities. This thoughtful structure is essential for maintaining long-term productivity and developing expertise.
+                Tijdens deze POP-sessie kreeg ik een dieper inzicht in het belang van gestructureerde planning om leren, werk en persoonlijke verantwoordelijkheden effectief in balans te brengen. Het gedetailleerde schema benadrukte het belang van gefocuste studieperiodes, zoals het werken aan "C# Essentials" en "Data Essentials", naast tijd voor rust en dagelijkse activiteiten. Deze doordachte structuur is essentieel voor het behouden van langdurige productiviteit en het ontwikkelen van expertise.
             </p>
             <p class="emphasize4 bold">
-                How can you implement the learning material from this session in your daily life as a programmer?
+                Hoe kan je de leerstof uit deze sessie implementeren in je dagelijkse leven als programmeur?
             </p>
             <p>
-                In my daily life as a programmer, I can apply this approach by creating a similarly time-blocked schedule. For example, I could dedicate specific hours to learning new programming languages, revisiting foundational knowledge, and tackling coding challenges while also setting aside time for relaxation and reflection. Adopting such disciplined planning will enhance my focus and help prevent burnout, ultimately improving my learning progress and professional performance.
+                In mijn dagelijks leven als programmeur kan ik deze aanpak toepassen door een vergelijkbare tijdsgebonden planning te maken. Bijvoorbeeld, ik zou specifieke uren kunnen reserveren voor het leren van nieuwe programmeertalen, het herzien van basiskennis en het aanpakken van programmeeruitdagingen, terwijl ik ook tijd inplan voor ontspanning en reflectie. Het aannemen van een dergelijke gestructureerde planning zal mijn focus verbeteren en helpen om burn-out te voorkomen, wat uiteindelijk mijn leerproces en professionele prestaties zal verbeteren.
             </p>
             <p>
             </p>
@@ -780,28 +780,28 @@
                 X-Factor
             </p>
             <p class="emphasize4 bold">
-                (Em)passion
+                (Em)passie
             </p>
             <p>
-                I've always been passionate about technology and computers. It's with great admiration that I've looked at artistic websites and video games and I always aspired to some day be able to create my own technological pieces of art. I've started this formal education with the goal to not only learn but to grow as a developer. Not just on the technical side of things but the creative as well. Working with peers on a project and therefore a common goal is a great perspective I look forward to in my future career.
+                Ik ben altijd gepassioneerd geweest door technologie en computers. Met grote bewondering heb ik naar artistieke websites en videospellen gekeken en ik heb altijd de ambitie gehad om op een dag mijn eigen technologische kunstwerken te creëren. Ik ben deze formele opleiding begonnen met het doel niet alleen te leren, maar ook te groeien als ontwikkelaar. Niet alleen op technisch vlak, maar ook creatief. Werken met collega's aan een project en dus een gemeenschappelijk doel is een geweldige perspectief waar ik naar uitkijk in mijn toekomstige carrière.
             </p>
             <p class="emphasize4 bold">
-                Entrepreneurial and innovative
+                Ondernemend en innovatief
             </p>
             <p>
-                Growing up in a family of entrepreneurs, it's inevitable that I've grown fond of the idea of being responsible for my own company. Throughout the years, it's not so much the need to actually own a company of myself, but to have the responsibility to be able to do things that matter. I see myself, today still, starting a company one day, but it's especially that mentality of wanting to be a part of something bigger that drives me to do what I do every day. I want to be a part of something that matters, that is innovative and above all, something I am responsible for.
+                Opgegroeid in een familie van ondernemers, is het onvermijdelijk dat ik de idee van het verantwoordelijk zijn voor mijn eigen bedrijf waardeer. Door de jaren heen is het niet zozeer de behoefte om echt zelf een bedrijf te bezitten, maar de verantwoordelijkheid om dingen te kunnen doen die er toe doen. Ik zie mezelf, zelfs vandaag de dag, ooit een bedrijf starten, maar het is vooral die mentaliteit van willen bijdragen aan iets groters die me drijft om elke dag te doen wat ik doe. Ik wil deel uitmaken van iets dat ertoe doet, dat innovatief is en bovenal iets waar ik verantwoordelijk voor ben.
             </p>
             <p class="emphasize4 bold">
-                (International) Collaboration
+                (Internationaal) Samen(net)werken
             </p>
             <p>
-                I believe limiting one self is to block one to ever reach their full potential. Knowledge does not stop at any country borders. We live in a day and age where enormous amounts of knowledge is at our fingertips thanks to the internet. I regularly visit community websites and learning pages to see what peers with similar interest are up to and how I can improve myself. As stated above, working with people with similar interest towards a common goal is what creates opportunities to create truly worthwhile projects. It's also with the help of this community that I even applied and started with this formal education in the first place, and I'm very glad I did.
+                Ik geloof dat het jezelf beperken betekent dat je jezelf tegenhoudt om je volledige potentieel te bereiken. Kennis stopt niet bij landgrenzen. We leven in een tijdperk waarin enorme hoeveelheden kennis binnen handbereik liggen dankzij het internet. Ik bezoek regelmatig communitywebsites en leerpagina’s om te zien waar mensen met vergelijkbare interesses mee bezig zijn en hoe ik mezelf kan verbeteren. Zoals eerder genoemd, is het werken met mensen met vergelijkbare interesses aan een gemeenschappelijk doel wat mogelijkheden creëert om echt waardevolle projecten te realiseren. Het is ook dankzij deze gemeenschap dat ik me heb aangemeld en met deze formele opleiding ben begonnen, en ik ben heel blij dat ik dat heb gedaan.
             </p>
             <p class="emphasize4 bold">
-                Multi- & disciplinary
+                Multi- & disciplinariteit:
             </p>
             <p>
-                The field of IT is embedded in all kinds of different sectors. It's unthinkable to not have a website or rely on software applications to run a business. This fact will allow me to meet and work with a lot of people. This education already has shed a light about how my future will unfold, and I can't wait to start working in IT.
+                Het vakgebied van IT is ingebed in allerlei verschillende sectoren. Het is ondenkbaar om geen website te hebben of niet afhankelijk te zijn van softwaretoepassingen om een bedrijf te runnen. Dit feit zal me in staat stellen om veel mensen te ontmoeten en mee te werken. Deze opleiding heeft me al inzicht gegeven in hoe mijn toekomst zich zal ontwikkelen, en ik kan niet wachten om in de IT te gaan werken.
             </p>
         </div>
     </section>
@@ -812,11 +812,11 @@
             <p><span class="calligraphy">Lorenzo Latinne</span> - 1PROa</p>
         </div>
         <div class="footer-middle">
-            <p>Assignment Portfolio</p>
+            <p>Opdracht Portfolio</p>
         </div>
         <div class="footer-right">
             <a href="#top-of-page">
-                <p>Back to top</p>
+                <p>Terug naar boven</p>
                 <img src="assets/images/arrow-up.png" alt="">
             </a>
         </div>
