Bug fixes. Language links.

--- a/portfolioNL.html
+++ b/portfolioNL.html
@@ -19,25 +19,25 @@
         <div class="nav-middle">
             <ul>
                 <li>
-                    <a href="portfolioEN.html#top-of-page">INTRO</a>
+                    <a href="portfolioNL.html#top-of-page">INTRO</a>
                 </li>
                 <li>
-                    <a href="portfolioEN.html#log-book">LOGBOEK</a>
+                    <a href="portfolioNL.html#log-book">LOGBOEK</a>
                 </li>
                 <li>
-                    <a href="portfolioEN.html#growth">ONTWIKKELING</a>
+                    <a href="portfolioNL.html#growth">ONTWIKKELING</a>
                 </li>
                 <li>
-                    <a href="portfolioEN.html#projects">PROJECTEN</a>
+                    <a href="portfolioNL.html#projects">PROJECTEN</a>
                 </li>
                 <li>
-                    <a href="portfolioEN.html#reflection">REFLECTIES</a>
+                    <a href="portfolioNL.html#reflection">REFLECTIES</a>
                 </li>
             </ul>
         </div>
         <div class="nav-right">
             <a href="indexNL.html" class="switch-button">CV</a>
-            <a href="indexEN.html#contact-section" class="contact-button">
+            <a href="indexNL.html#contact-section" class="contact-button">
                 <p>CONTACT</p>
             </a>
         </div>
@@ -738,7 +738,7 @@
         </div>
     </section>
     <section id="reflection" class="reflection">
-        <h3>Reflection</h3>
+        <h3>Reflectie</h3>
         <div class="aim-reflection-project">
             <p class="emphasize1 bold center">
                 AIM-reflectie over Web Project: CV.
