--- a/portfolioNL.html
+++ b/portfolioNL.html
@@ -387,8 +387,7 @@
                         OLR11
                     </td>
                     <td class="description-col">
-                        De gegradueerde onderhoudt zijn deskundigheidsniveau door relevante duurzame IT- en maatschappelijke ontwikkelingen actief op te volgen
-                        op te volgen.
+                        De gegradueerde onderhoudt zijn deskundigheidsniveau door relevante duurzame IT- en maatschappelijke ontwikkelingen actief op te volgen.
                     </td>
                 </tr>
                 <tr>
