--- a/portfolioNL.html
+++ b/portfolioNL.html
@@ -802,6 +802,18 @@
             <p>
                 Het vakgebied van IT is ingebed in allerlei verschillende sectoren. Het is ondenkbaar om geen website te hebben of niet afhankelijk te zijn van softwaretoepassingen om een bedrijf te runnen. Dit feit zal me in staat stellen om veel mensen te ontmoeten en mee te werken. Deze opleiding heeft me al inzicht gegeven in hoe mijn toekomst zich zal ontwikkelen, en ik kan niet wachten om in de IT te gaan werken.
             </p>
+            <p class="emphasize4 bold">
+                Samenvatting X-Factor:
+            </p>
+            <p>
+                Mijn X-factor is een unieke combinatie van technische interesse, creatieve visie en een ondernemende mindset. Door zelf te experimenteren en samen te werken, heb ik ervaring opgedaan in het creëren van functionele en esthetische oplossingen.
+            </p>
+            <p>
+                Binnen de opleiding kan ik mijn passie en creativiteit inzetten voor innovatieve projecten, samenwerken met medestudenten en leren van diverse perspectieven. Mijn ondernemende instelling helpt me kansen te benutten en uitdagingen aan te gaan.
+            </p>
+            <p>
+                Ik wil mijn technische en creatieve vaardigheden verdiepen door nieuwe technologieën en projecten te verkennen. Samenwerken in internationale en multidisciplinaire settings en deelnemen aan stages of hackathons zal mijn groei verder ondersteunen.
+            </p>
         </div>
     </section>
 </main>
